<resources>
    <string name="app_name">issue-tracker</string>
    <string name="hello_sing_up_fragment">Hello sing up fragment</string>
    <string name="main_text">회원가입</string>
    <string name="id">아이디</string>
    <string name="id_hint">이메일을 입력해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="password_recheck">비밀번호 재확인</string>
    <string name="name">이름</string>
    <string name="next">다음</string>
    <string name="user_email_id">아이디</string>
    <string name="email_password">비밀번호</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="issue_tracker">issue_tracker</string>
    <string name="title_activity_issue">IssueActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_title_issue">이슈</string>
    <string name="menu_title_label">레이블</string>
    <string name="menu_title_milestone">마일스톤</string>
    <string name="menu_title_my_account">내 계정</string>
    <string name="label_btn_issue_filter">btn_issue_filter</string>
    <string name="label_issue">이슈</string>
    <string name="label_issue_search">issue_search</string>
    <string name="labellist_title">레이블</string>
    <string name="add_new_label_title">새로운 레이블</string>
    <string name="label_title">제목</string>
    <string name="label_description">설명</string>
    <string name="label_optional_description">선택사항</string>
    <string name="label_title_required">필수 입력</string>
    <string name="label_background_color">배경색</string>
    <string name="go_back">뒤로가기</string>
    <string name="change_random_color">색상변경</string>
    <string name="label_save">저장</string>
    <string name="label_filter_title">필터</string>
    <string name="label_filter_button">filter_button</string>
    <string name="label_filter_apply">적용</string>
    <string name="add_new_mile_stone">새로운 마일스톤</string>
    <string name="pick_date">선택 사항(YYYY-MM-DD)</string>
    <string name="mile_stone_title">마일스톤</string>
    <string name="select_date">날짜</string>
    <string name="open_issue_count">열린 이슈 %d개</string>
    <string name="closed_issue_count">닫힌 이슈 %d개</string>
    <string name="label_delete_longclick">delete longClick</string>
    <string name="label_delete_issue">delete_issue</string>
    <string name="label_close_issue">close_issue</string>
    <string name="add_new_issue">이슈 작성</string>
    <string name="text_pre_view">미리보기</string>
    <string name="new_issue_title">제목</string>
    <string name="add_new_issue_title">이슈 작성</string>
    <string name="label_search">검색</string>
    <string name="label_search_issue_hint">검색어를 입력하세요</string>
    <string name="issue_edit_mode">이슈편집</string>
    <string name="user_image_detail">userImage</string>
    <string name="label_nick_name">닉네임</string>
    <string name="button_logo">button_logo</string>
    <string name="label_custom_image">라벨 이미지</string>
    <string name="filter_status">상태</string>
    <string name="filter_author">작성자</string>
    <string name="filter_label">레이블</string>
    <string name="filter_milestone">마일스톤</string>
    <string name="issue_tracker_drawable">issueTrackerDrawable</string>
    <string name="issue_close">닫기</string>
    <string name="label_default_description">새로운 기능 추가</string>
    <string name="save_label_complete">성공적으로 저장하였습니다</string>
    <string name="label_close">close</string>
    <string name="label_delete">delete</string>
</resources>
